--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -5,7 +5,7 @@
     "1: Getting Started": "1 : Démarrer",
     "2: Sort Me": "2 : Trie-moi",
     "3: In Every Case": "3 : Dans tous les cas",
-    "4: Everyone Is Min": "4 : Tout le monde est petit",
+    "4: Everyone Is Min": "4 : Tout le monde a la moyenne",
     "5: Count the Comments": "5 : Compte les commentaires",
     "6: Give Me an Overview": "6 : Fais-moi un résumé",
     "7: Analyze": "7 : Analyse",
