--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,4 +1,16 @@
 {
   "title": "Lololodash - learn LoDash",
-  "subtitle": "\u001b[23mSelect an exercise and hit \u001b[3mEnter\u001b[23m to begin"
+  "subtitle": "\u001b[23mSelect an exercise and hit \u001b[3mEnter\u001b[23m to begin",
+  "common": {
+    "exercise": {
+      "logcompare": {
+        "input": "Input",
+        "output": "Output",
+        "output_should_be": "Output should be:"
+      },
+      "missing_deps": "You need to install all of the dependencies you are using in your solution (e.g. lodash)",
+      "module_not_found": "Could not find your file. Make sure the path is correct.",
+      "must_export_function": "You should always return a function using the module.exports object."
+    }
+  }
 }
