--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -25,7 +25,7 @@
     "1: Getting Started": "1 : 시작하기",
     "2: Sort Me": "2 : 정렬해주세요",
     "3: In Every Case": "3 : 모든 경우",
-    "4: Everyone Is Min": "4 : Everyone Is Min",
+    "4: Everyone Is Min": "4 : 모두 다 최소",
     "5: Count the Comments": "5 : 댓글 세기",
     "6: Give Me an Overview": "6 : 요약해 주세요",
     "7: Analyze": "7 : 분석",
