--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -25,11 +25,11 @@
     "2: Sort Me": "2 : Trie-moi",
     "3: In Every Case": "3 : Dans tous les cas",
     "4: Everyone Is Min": "4 : Tout le monde a la moyenne",
-    "5: Count the Comments": "5 : Compte les commentaires",
-    "6: Give Me an Overview": "6 : Fais-moi un résumé",
-    "7: Analyze": "7 : Analyse",
-    "8: Start templating": "8 : Commence les templates",
-    "9: ToDo Template": "9 : Template de To-Do"
+    "5: Chain Mail": "5 : Cotte de Mailles",
+    "6: Count the Comments": "6 : Compte les commentaires",
+    "7: Give Me an Overview": "7 : Fais-moi un résumé",
+    "8: Analyze": "8 : Analyse",
+    "9: Start templating": "9 : Commence les templates"
   },
   "exercises": {
     "2: Sort Me": {
