--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -26,11 +26,11 @@
     "2: Sort Me": "2 : 정렬해주세요",
     "3: In Every Case": "3 : 모든 경우",
     "4: Everyone Is Min": "4 : 모두 다 최소",
-    "5: Count the Comments": "5 : 댓글 세기",
-    "6: Give Me an Overview": "6 : 요약해 주세요",
-    "7: Analyze": "7 : 분석",
-    "8: Start templating": "8 : 템플릿 시작하기",
-    "9: ToDo Template": "9 : To-do 템플릿"
+    "5: Chain Mail": "5 : 사슬 편지",
+    "6: Count the Comments": "6 : 댓글 세기",
+    "7: Give Me an Overview": "7 : 요약해 주세요",
+    "8: Analyze": "8 : 분석",
+    "9: Start templating": "9 : 템플릿 시작하기"
   },
   "exercises": {
     "2: Sort Me": {
