Improve French texts

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -25,7 +25,7 @@
     "2: Sort Me": "2 : Trie-moi",
     "3: In Every Case": "3 : Dans tous les cas",
     "4: Everyone Is Min": "4 : Tout le monde a la moyenne",
-    "5: Chain Mail": "5 : Cotte de Mailles",
+    "5: Chain Mail": "5 : Travail à la chaîne",
     "6: Count the Comments": "6 : Compte les commentaires",
     "7: Give Me an Overview": "7 : Fais-moi un résumé",
     "8: Analyze": "8 : Analyse",
