Fix nesting of en.json

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -8,9 +8,11 @@
         "output": "Output",
         "output_should_be": "Output should be:"
       },
-      "missing_deps": "You need to install all of the dependencies you are using in your solution (e.g. lodash)",
-      "module_not_found": "Could not find your file. Make sure the path is correct.",
-      "must_export_function": "You should always return a function using the module.exports object."
+      "fail": {
+        "missing_deps": "You need to install all of the dependencies you are using in your solution (e.g. lodash)",
+        "module_not_found": "Could not find your file. Make sure the path is correct.",
+        "must_export_function": "You should always return a function using the module.exports object."
+      }
     }
   }
 }
