--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -8,7 +8,7 @@
         "output": "Sortie",
         "output_should_be": "La sortie devrait être :"
       },
-      "missing_deps": "You need to install all of the dependencies you are using in your solution (e.g. lodash)",
+      "missing_deps": "You need to install all of the dependencies you are using in your solution (e.g. lodash): {{missing}}",
       "module_not_found": "Could not find your file. Make sure the path is correct.",
       "must_export_function": "You should always return a function using the module.exports object.",
 
